--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>coba remote</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo numquam maiores similique enim quisquam neque, nostrum, repudiandae natus, corrupti ipsum a! Placeat eos sequi odit nostrum natus expedita, similique et.</p>
 </body>
 </html>
